11.deploy/a-b/stable-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-stable
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.s<номер своего логина>.edu.slurm.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-stable
                port:
                  number: 80
